--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
     "description": "A simple Express.js application using TypeScript",
     "main": "dist/app.js",
     "scripts": {
-      "build": "tsc",
-      "start": "node dist/app.js",
-      "dev": "nodemon src/app.ts"
+        "build": "tsc",
+        "start": "node dist/app.js",
+        "dev": "nodemon src/app.ts"
     },
     "dependencies": {
-      "bcrypt": "^5.1.1",
-      "express": "^4.21.1",
-      "jsonwebtoken": "^9.0.2",
-      "sqlite3": "^5.1.7",
-      "typeorm": "^0.3.20"
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.5.0",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "sqlite3": "^5.1.7",
+        "typeorm": "^0.3.20"
     },
     "devDependencies": {
-      "@types/bcrypt": "^5.0.2",
-      "@types/express": "^4.17.21",
-      "@types/jsonwebtoken": "^9.0.7",
-      "@types/node": "^22.13.8",
-      "nodemon": "^3.1.7",
-      "ts-node": "^10.9.2",
-      "typescript": "^5.8.2"
+        "@types/bcrypt": "^5.0.2",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^22.13.8",
+        "nodemon": "^3.1.7",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.2"
     },
     "author": "",
     "license": "ISC"
-  }
+}
